# youtube-video-documenter

./: .gitignore  LICENSE  README.md  analisar_video.py  main.py  pyproject.toml
