[project]
name = "youtube-video-documenter"
version = "0.1.0"
description = "Transforma vídeos do YouTube em documentação técnica estruturada com análise por LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.0.0",
    "opencv-python>=4.8.0",
    "openai-whisper>=20231117",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
]
